Added minting route, added meta update route, all should be working
