# routes/currency.js
@@ -2,6 +2,7 @@ const express = require('express')
 const router = express.Router()
 
 const CurrencyOps = require('../db/operations/currency')
+const Currency = require('../db/schema/currency')
 const AppOps = require('../db/operations/application')
 const ProtectRoute = require('../auth/protected')
 
@@ -61,6 +62,118 @@ router.post('/', (req, res) => {
     }
 
     ProtectRoute(RoutePermissions, req, res, RouteOperation)
+})
+
+router.get('/:CurrencyID', (req, res) => {
+    CurrencyOps.ReadOneCurrency(req.params.CurrencyID).then(thisCurrency => {
+        if (thisCurrency) {
+            res.status(200).send(MapCurrency(thisCurrency))
+        }
+        else {
+            res.status(404).send('Not Found: No currency with that ID')
+        }
+    })
+})
+
+router.put('/:CurrencyID', (req, res) => {
+    const RoutePermissions = [AppOps.PermissionTypes.CanChangeCurrencyMeta]
+
+    const RouteOperation = () => {
+        const RequiredFields = ['Name', 'Symbol']
+        if (RequiredFields.every( item => req.body.hasOwnProperty(item))) {
+            CurrencyOps.ReadOneCurrency(req.params.CurrencyID).then(thisCurrency => {
+                if (thisCurrency) {
+                    thisCurrency.CurrencyName = req.body.Name
+                    thisCurrency.CurrencySymbol = req.body.Symbol
+                    thisCurrency.save()
+                    res.status(200).send(`OK: Currency is now named ${thisCurrency.CurrencyName} with the symbol ${thisCurrency.CurrencySymbol}`)
+                }
+                else {
+                    res.status(404).send('Not found: No currency at that ID')
+                }
+            })
+        }
+        else {
+            res.status(400).send('Bad request: Incomplete body')
+        }
+    }
+
+    ProtectRoute(RoutePermissions, req, res, RouteOperation)
+})
+
+router.delete('/:CurrencyID', (req, res) => {
+    const RequiredPermissions = [AppOps.PermissionTypes.CanDeleteCurrency]
+    
+    const RouteOperation = () => {
+        Currency.Model.deleteOne({_id: req.params.CurrencyID}, (err, MongoResponse) => {
+            if (err) res.status(500).send(err)
+            else {
+                res.status(200).send('OK: Data deleted')
+            }
+        })
+    }
+    
+    ProtectRoute(RequiredPermissions, req, res, RouteOperation)
+})
+
+router.put('/:CurrencyID/mint', (req, res) => {
+    const RequiredPermissions = [AppOps.PermissionTypes.CanMintCurrency]
+
+    const RouteOperation = () => {
+        if (req.query.hasOwnProperty('amount')) {
+            if (!isNaN(parseInt(req.query.amount)) && (parseInt(req.query.amount) >= 0)) {
+                CurrencyOps.ReadOneCurrency(req.params.CurrencyID).then( thisCurrency => {
+                    if (thisCurrency) {
+                        thisCurrency.CurrencyRemainingStockpile += parseInt(req.query.amount)
+                        thisCurrency.CurrencyTotalStockpile += parseInt(req.query.amount)
+                        thisCurrency.save()
+                        res.status(200).send(thisCurrency)
+                    }
+                    else {
+                        res.status(404).send(`Not found: Currency ID ${req.params.CurrencyID} does not exist`)
+                    }
+                })
+            }
+            else {
+                res.status(400).send('Bad request: \'amount\' must be a positive, non-zero number')
+            }
+        }
+        else {
+            res.status(400).send('Bad request: No amount specified in query')
+        }
+    }
+
+    ProtectRoute(RequiredPermissions, req, res, RouteOperation)
+})
+
+router.delete('/:CurrencyID/mint', (req, res) => {
+    const RequiredPermissions = [AppOps.PermissionTypes.CanDestroyCurrency]
+
+    const RouteOperation = () => {
+        if (req.query.hasOwnProperty('amount')) {
+            if (!isNaN(parseInt(req.query.amount)) && (parseInt(req.query.amount) >= 0)) {
+                CurrencyOps.ReadOneCurrency(req.params.CurrencyID).then( thisCurrency => {
+                    if (thisCurrency) {
+                        thisCurrency.CurrencyRemainingStockpile -= parseInt(req.query.amount)
+                        thisCurrency.CurrencyTotalStockpile -= parseInt(req.query.amount)
+                        thisCurrency.save()
+                        res.status(200).send(thisCurrency)
+                    }
+                    else {
+                        res.status(404).send(`Not found: Currency ID ${req.params.CurrencyID} does not exist`)
+                    }
+                })
+            }
+            else {
+                res.status(400).send('Bad request: \'amount\' must be a positive, non-zero number')
+            }
+        }
+        else {
+            res.status(400).send('Bad request: No amount specified in query')
+        }
+    }
+
+    ProtectRoute(RequiredPermissions, req, res, RouteOperation)
 })
 
 module.exports = router
