# swagger.yaml
@@ -263,42 +263,8 @@ paths:
                 $ref: '#/components/schemas/currency'
       operationId: get-currency-CurrencyID
       description: Retrieve a specific currency
-    put:
-      summary: PUT /currency/CurrencyID
-      operationId: put-currency-CurrencyID
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Bad Request
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      description: This endpoint is used to add or remove currency from the Stockpile
-      parameters:
-        - schema:
-            type: string
-          in: query
-          name: action
-          required: true
-          description: Action for minting/removing (add/remove)
-      tags:
-        - Currency
-      security:
-        - Authorization: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                Amount:
-                  type: number
-              required:
-                - Amount
     delete:
-      summary: ''
+      summary: DELETE /currency/CurrencyID
       operationId: delete-currency-CurrencyID
       responses:
         '200':
@@ -314,6 +280,80 @@ paths:
         - Authorization: []
       tags:
         - Currency
+    put:
+      summary: PUT /currency/CurrencyID
+      operationId: put-currency-CurrencyID
+      responses:
+        '200':
+          description: OK
+      description: Update currency information
+      tags:
+        - Currency
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                Name:
+                  type: string
+                Symbol:
+                  type: string
+        description: New info
+  '/currency/{CurrencyID}/mint':
+    parameters:
+      - schema:
+          type: string
+        name: CurrencyID
+        in: path
+        required: true
+    put:
+      summary: PUT /currency/CurrencyID/mint
+      operationId: put-currency-CurrencyID-mint
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+      security:
+        - Authorization: []
+      tags:
+        - Currency
+      description: Add money to a currency's stockpile
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: amount
+          required: true
+          description: The amount to add
+    delete:
+      summary: DELETE /currency/CurrencyID/mint
+      operationId: delete-currency-CurrencyID-mint
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+      security:
+        - Authorization: []
+      tags:
+        - Currency
+      description: Remove money from a currency's stockpile
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: amount
+          description: The amount to remove
 components:
   schemas:
     user:
